# iso2D

./: .gitignore  CMakeLists.txt  README.md  old_CMAKE.txt
include/: Animation.h  Animator.h  AssetManager.h  Character.h  Entity.h  EntityManager.h  IsoCamera.h  LayerManager.h  Player.h  Tile.h  Tree.h  World.h  WorldSerializer.h
include/util/: math.h
src/: Animation.cpp  Animator.cpp  AssetManager.cpp  Character.cpp  Entity.cpp  EntityManager.cpp  IsoCamera.cpp  LayerManager.cpp  Player.cpp  Tile.cpp  Tree.cpp  World.cpp  WorldSerializer.cpp  main.cpp
src/collision/: Collider.cpp  Collider.h  CollisionManager.cpp  CollisionManager.h
src/editor/: EditorContext.h  EditorWindow.cpp  EditorWindow.h  SpriteWindow.cpp  SpriteWindow.h
src/events/: EventManager.cpp  EventManager.h  EventRegion.cpp  EventRegion.h
